2014-07-27  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (add_to_sclist): Remove the now unused and unneeded
	addition ability from this builder function of the shortcut list.
	* src/global.c (strtokeytype): Move this to a better place.
	* src/global.c (first_sc_for): Move this too to a better place.

2014-07-24  Jordi Mallach  <jordi@gnu.org>
	* doc/texinfo/nano.texi, doc/man/nanorc.5: Typo fix.

2014-07-22  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/nanorc.nanorc: Remove 'undo' from the valid options.

2014-07-21  Jordi Mallach  <jordi@gnu.org>
	* doc/nanorc.sample.in: Remove ‘undo’ section which is now obsolete.

GNU nano 2.3.6 - 2014.07.17
2014-07-16  Jordi Mallach  <jordi@gnu.org>
	* doc/man/rnano.1: Additional printing formatting improvement from
	Bjarni Ingi Gislason.

2014-07-16  Jordi Mallach  <jordi@gnu.org>
	* doc/man/fr/nano.1, doc/man/fr/rnano.1: Apply similar escaping fixes
	to French manpages.
	* doc/man/fr/nano.1, doc/man/fr/rnano.1, doc/man/fr/nanorc.5: Recode
	as UTF-8.

2014-07-16  Jordi Mallach  <jordi@gnu.org>
	* doc/syntax/debian.nanorc: Add https, tor and spacewalk to supported
	APT methods.
	* doc/syntax/debian.nanorc: Apply the syntax to apt/sources.list.d/
	entries as well, as reported by Rodolphe Pelloux-Prayer.

2014-07-16  Jordi Mallach  <jordi@gnu.org>
	* doc/man/nano.1, doc/man/rnano.1: Add some escaping and formatting
	fixes as suggested Bjarni Ingi Gislason <bjarniig@rhi.hi.is> in
	Debian bugs #662842 and #726956.

2014-07-16  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c: Normalize the tabbing.

2014-07-16  Mark Majeres  <mark@engine12.com>
	* src/text.c (do_undo): Make sure renumbering starts far enough back
	after undoing a cut or paste.  This fixes a segmentation fault when
	undoing a repeated cutting and pasting of the first line of a file.
	* src/nano.c (move_to_filestruct, copy_from_filestruct): Fix two leaks.

2014-07-13  David Lawrence Ramsey  <pooka109@gmail.com>